adding pandsToJobOrderList